add all exercises html

--- a/HTML/enllaços&imatges&llistes.html
+++ b/HTML/enllaços&imatges&llistes.html
@@ -1,113 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enllaços, imatges i llistes</title>
     <style>
-        body {
-            background-image: url("https://www.w3schools.com/html/img_girl.jpg");
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-        }
+      body {
+        background-image: url("https://www.w3schools.com/html/img_girl.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
 
-        dt {
-            font-weight: bold;
-        }
+      dt {
+        font-weight: bold;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Índex</h1>
     <ol type="I">
-        <li><a href="#nois">Noms de noi més populars</a></li>
-        <li><a href="#noies">Noms de noia més populars</a></li>
-        <li><a href="#ciutats">Ciutats del baix llobregat</a></li>
+      <li><a href="#nois">Noms de noi més populars</a></li>
+      <li><a href="#noies">Noms de noia més populars</a></li>
+      <li><a href="#ciutats">Ciutats del baix llobregat</a></li>
     </ol>
     <a name="nois"></a>
     <h2>Noms de noi més populars</h2>
     <ul type="square">
-        <li>Marc</li>
-        <li>Leo</li>
-        <li>Àlex/álex</li>
-        <li>Jan</li>
-        <li>Nil</li>
-        <li>Pol</li>
-        <li>Hugo</li>
-        <li>Biel</li>
-        <li>Pau</li>
-        <li>Èric/Eric</li>
+      <li>Marc</li>
+      <li>Leo</li>
+      <li>Àlex/álex</li>
+      <li>Jan</li>
+      <li>Nil</li>
+      <li>Pol</li>
+      <li>Hugo</li>
+      <li>Biel</li>
+      <li>Pau</li>
+      <li>Èric/Eric</li>
     </ul>
     <a name="noies"></a>
     <h2>Noms de noia més populars</h2>
     <ul type="circle">
-        <li>Júlia/Julia</li>
-        <li>Martina</li>
-        <li>Emma</li>
-        <li>Lucía</li>
-        <li>Ona</li>
-        <li>Maria/María</li>
-        <li>Mia</li>
-        <li>Laia</li>
-        <li>Abril</li>
-        <li>Sofía/Sofia</li>
+      <li>Júlia/Julia</li>
+      <li>Martina</li>
+      <li>Emma</li>
+      <li>Lucía</li>
+      <li>Ona</li>
+      <li>Maria/María</li>
+      <li>Mia</li>
+      <li>Laia</li>
+      <li>Abril</li>
+      <li>Sofía/Sofia</li>
     </ul>
     <picture>
-        <source media="(min-width:1000px)" srcset="https://www.w3schools.com/html/img_avatar.png">
-        <source media="(min-width:800px)" srcset=" https://www.w3schools.com/html/img_food.jpg">
-        <source media="(min-width:600px )" srcset="https://www.w3schools.com/html/img_beatles.gif">
-        <img src="https://www.w3schools.com/html/img_car.jpg" alt="Cars" style="width:auto;">
+      <source
+        media="(min-width:1000px)"
+        srcset="https://www.w3schools.com/html/img_avatar.png"
+      />
+      <source
+        media="(min-width:800px)"
+        srcset="https://www.w3schools.com/html/img_food.jpg"
+      />
+      <source
+        media="(min-width:600px )"
+        srcset="https://www.w3schools.com/html/img_beatles.gif"
+      />
+      <img
+        src="https://www.w3schools.com/html/img_car.jpg"
+        alt="Cars"
+        style="width: auto"
+      />
     </picture>
     <a name="ciutats"></a>
     <h2>Ciutats del baix llobregat</h2>
     <dl>
-        <dt>Cornellà de Llobregat</dt>
-        <dd>88.592</dd>
+      <dt>Cornellà de Llobregat</dt>
+      <dd>88.592</dd>
 
-        <dt>Sant Boi de Llobregat</dt>
-        <dd>83.605</dd>
+      <dt>Sant Boi de Llobregat</dt>
+      <dd>83.605</dd>
 
-        <dt>Castelldefels</dt>
-        <dd>67.004</dd>
+      <dt>Castelldefels</dt>
+      <dd>67.004</dd>
 
-        <dt>Viladecans</dt>
-        <dd>66.611</dd>
+      <dt>Viladecans</dt>
+      <dd>66.611</dd>
 
-        <dt>Prat de Llobregat, el</dt>
-        <dd>64.599</dd>
+      <dt>Prat de Llobregat, el</dt>
+      <dd>64.599</dd>
 
-        <dt>Gavà</dt>
-        <dd>46.771</dd>
+      <dt>Gavà</dt>
+      <dd>46.771</dd>
 
-        <dt>Esplugues de Llobregat</dt>
-        <dd>46.680</dd>
+      <dt>Esplugues de Llobregat</dt>
+      <dd>46.680</dd>
 
-        <dt>Sant Feliu de Llobregat</dt>
-        <dd>44.860</dd>
-        <dd>
-            <ol>
-                <li>Can Bertrand</li>
-                <li>Can calders</li>
-                <li>Can Llobera</li>
-                <li>Can Nadal</li>
-                <li>La Salut</li>
-                <li>Les Grases</li>
-                <li>Roses - Castellbell</li>
-                <li>Mas Lluí</li>
-            </ol>
-        </dd>
+      <dt>Sant Feliu de Llobregat</dt>
+      <dd>44.860</dd>
+      <dd>
+        <ol>
+          <li>Can Bertrand</li>
+          <li>Can calders</li>
+          <li>Can Llobera</li>
+          <li>Can Nadal</li>
+          <li>La Salut</li>
+          <li>Les Grases</li>
+          <li>Roses - Castellbell</li>
+          <li>Mas Lluí</li>
+        </ol>
+      </dd>
 
-        <dt>Sant Joan Despí</dt>
-        <dd>34.123</dd>
+      <dt>Sant Joan Despí</dt>
+      <dd>34.123</dd>
 
-        <dt>Martorell</dt>
-        <dd>28.189</dd>
+      <dt>Martorell</dt>
+      <dd>28.189</dd>
     </dl>
-    <p>Document realitzat per <a href="mailto:rgarciasanchez.cf@iesesteveterradas.cat">Raúl García</a></p>
-
-</body>
-
+    <p>
+      Document realitzat per
+      <a href="mailto:rgarciasanchez.cf@iesesteveterradas.cat">Raúl García</a>
+    </p>
+  </body>
 </html>
