--- a/HTML/taules.html
+++ b/HTML/taules.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taules</title>
     <style>
-        table,
-        th,
-        td {
-            border: 1px solid black;
-            text-align: center;
-        }
-        table{
-            width: 70%;
-            margin: auto;
-            border-spacing: 10px;
-        }
+      table,
+      th,
+      td {
+        border: 1px solid black;
+        text-align: center;
+      }
+      table {
+        width: 70%;
+        margin: auto;
+        border-spacing: 10px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Índex</h1>
-    <table> <!--cellspacing="10px"-->
-        <caption style="width: 100%;">Taula de prova amb lletres de l'abecedari.</caption>
-        <tr>
-            <td>A</td>
-            <td>B</td>
-            <td>C</td>
-            <td>D</td>
-        </tr>
-        <tr>
-            <td rowspan="2">E,I</td>
-            <td>F</td>
-            <td colspan="2">G,H</td>
-        </tr>
-        <tr>
-            <td>J</td>
-            <td rowspan="2">K,O</td>
-            <td>L</td>
-        </tr>
-        <tr>
-            <td>M</td>
-            <td>N</td>
-            <td>P</td>
-        </tr>
+    <table>
+      <!--cellspacing="10px"-->
+      <caption style="width: 100%">
+        Taula de prova amb lletres de l'abecedari.
+      </caption>
+      <tr>
+        <td>A</td>
+        <td>B</td>
+        <td>C</td>
+        <td>D</td>
+      </tr>
+      <tr>
+        <td rowspan="2">E,I</td>
+        <td>F</td>
+        <td colspan="2">G,H</td>
+      </tr>
+      <tr>
+        <td>J</td>
+        <td rowspan="2">K,O</td>
+        <td>L</td>
+      </tr>
+      <tr>
+        <td>M</td>
+        <td>N</td>
+        <td>P</td>
+      </tr>
     </table>
-
-</body>
-
+  </body>
 </html>
