--- a/FlexBox/ej7.html
+++ b/FlexBox/ej7.html
@@ -16,13 +16,17 @@
     }
     .container {
       display: flex;
+      height: 100%;
       flex-wrap: wrap;
+      align-content: center;
+      justify-content: center;
+      
     }
     .container div {
       font-size: 40px;
       color: white;
       text-align: center;
-      height: 200px;
+      height: 100px;
       width: 33.3%;
     }
     #div1 {
