--- a/FitasHechas/flexVertical.html
+++ b/FitasHechas/flexVertical.html
@@ -12,10 +12,11 @@ body {
     padding: 5px;
     background: #f4f6f6;
     max-width: 500px;
+    /* max-width: 250px; */
     margin: 0 auto;
     flex-direction: column-reverse;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content:center;
     height: 900px;
 }
 
