--- a/FlexBox/ej10.html
+++ b/FlexBox/ej10.html
@@ -16,58 +16,50 @@
     }
     .container {
       display: flex;
+      height: 100%;
+      flex-direction: column;
       flex-wrap: wrap;
+      order: 0;
     }
     .container div {
       font-size: 40px;
       color: white;
       text-align: center;
-      height: 200px;
-      width: 33.3%;
     }
     #div1 {
       background-color: rgb(6, 205, 148);
+      height: 25%;
     }
     #div2 {
       background-color: rgb(6, 39, 205);
+      height: 25%;
     }
     #div3 {
       background-color: blueviolet;
+      height: 40%;
     }
     #div4 {
       background-color: brown;
+      height: 10%;
     }
     #div5 {
       background-color: pink;
+      height: 50%;
     }
     #div6 {
       background-color: orange;
+      height: 50%;
     }
-    #div7 {
-      background-color: black;
-    }
-    #div8 {
-      background-color: darkgreen;
-    }
-    #div9 {
-      background-color: fuchsia;
-    }
-    #div10 {
-      background-color: dodgerblue;
-    }
+    
   </style>
   <body>
     <div class="container">
-      <div id="div1">1</div>
-      <div id="div2">2</div>
-      <div id="div3">3</div>
-      <div id="div4">4</div>
-      <div id="div5">5</div>
-      <div id="div6">6</div>
-      <div id="div7">7</div>
-      <div id="div8">8</div>
-      <div id="div9">9</div>
-      <div id="div10">10</div>
+      <div id="div1">UNO</div>
+      <div id="div2">DOS</div>
+      <div id="div3">TRES</div>
+      <div id="div4">CUATRO</div>
+      <div id="div5">CINCO</div>
+      <div id="div6">SEIS</div>
     </div>
   </body>
 </html>
