--- a/FlexBox/ej5.html
+++ b/FlexBox/ej5.html
@@ -16,14 +16,14 @@
     }
     .container {
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
     }
     .container div {
       font-size: 40px;
       color: white;
       text-align: center;
-      height: 200px;
-      width: 33.3%;
     }
     #div1 {
       background-color: rgb(6, 205, 148);
