--- a/FlexBox/ej6.html
+++ b/FlexBox/ej6.html
@@ -16,29 +16,51 @@
     }
     .container {
       display: flex;
-      flex-wrap: wrap;
+      height: 100%;
+      align-items: baseline;
     }
     .container div {
       font-size: 40px;
       color: white;
       text-align: center;
-      height: 200px;
-      width: 33.3%;
     }
     #div1 {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       background-color: rgb(6, 205, 148);
+      height: 20px;
+      width: 20px;
+      font-size: 10px;
     }
     #div2 {
       background-color: rgb(6, 39, 205);
     }
     #div3 {
+      display: flex;
+      /* pongo display flex para centrar texto end div */
       background-color: blueviolet;
+      height: 60px;
+      width: 20px;
+      justify-content: center;
+      align-items: center;
     }
     #div4 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 80px;
+      width: 30px;
       background-color: brown;
     }
     #div5 {
       background-color: pink;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 10px;
+      height: 10px;
+      font-size: 10px;
     }
     #div6 {
       background-color: orange;
@@ -53,6 +75,10 @@
       background-color: fuchsia;
     }
     #div10 {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 40px;
       background-color: dodgerblue;
     }
   </style>
